--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="fmt_username">Posted by: %s</string>
     <string name="fmt_realname">Real name: %s</string>
 
+    <string name="error_loading_retry">Error while loading.\nRetry?</string>
+    <string name="not_found_error">Not found</string>
+
     <string name="action_label_http_giphy">Giphy website</string>
     <string name="action_label_scheme_giphy">Giphy</string>
 </resources>
